fix spacing and widths

--- a/styles/custom.global.scss
+++ b/styles/custom.global.scss
@@ -33,9 +33,9 @@ $badge-padding-y: .35em;
 $badge-padding-x: .65em;
 $badge-margin-right: 1em;
 $container-max-widths: (
-  sm: 540px,
+  sm: 450px,
   md: 600px,
-  // lg: 960px,
+  lg: 960px,
 );
 // font 
 // Title
